--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: poker
 version: 0.0.4
 description: >-
   A Dart implementation of Henry Lee's Poker Hand Evaluator.
-homepage: https://pub.dev/packages/poker
+homepage: https://github.com/axross/poker
 repository: https://github.com/axross/poker
 documentation: https://pub.dev/documentation/poker/latest/
 environment:
