--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,14 @@
 name: poker
-version: 0.1.4
+version: 0.2.5
 description: >-
   A Dart implementation of Texas Hold'em matchup simulator based on Henry Lee's Poker Hand Evaluator.
 homepage: https://github.com/axross/poker
 repository: https://github.com/axross/poker
 environment:
-  sdk: ">=2.8.1 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 dependencies:
-  meta: ^1.1.8
+  args: ^2.3.0
+  meta: ^1.3.0
 dev_dependencies:
-  benchmark_harness: 1.0.5
-  test: 1.15.1
+  benchmark_harness: ^2.0.0
+  test: ^1.17.12
