Support JS running environment

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ repository: https://github.com/axross/poker
 environment:
   sdk: ">=2.12.0 <3.0.0"
 dependencies:
+  bitcount: ^0.3.0
+  lints: ^2.0.0
   meta: ^1.3.0
 dev_dependencies:
   test: ^1.17.12
