feat: add on-release action

--- a/.github/workflows/on-push-main.yml
+++ b/.github/workflows/on-push-main.yml
@@ -25,10 +25,11 @@ jobs:
         with:
           directory: coverage
   release:
+    needs: [unit-test]
     name: Release
     runs-on: ubuntu-latest
     steps:
-      - name: release-please-action
+      - name: Run Release Please
         uses: google-github-actions/release-please-action@v3
         with:
           token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
