--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -1,16 +1,20 @@
 name: on Pull Request
 on:
-  - pull_request
+  pull_request:
+    branches-ignore:
+      - "release-please-*"
 jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use flutter-action
+        uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.0.1"
-      - name: Install npm packages
+      - name: Install pub packages
         run: dart pub get
       - name: Dart Analyze
         run: dart analyze
@@ -18,11 +22,13 @@ jobs:
     name: Unit Test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use flutter-action
+        uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.0.1"
-      - name: Install npm packages
+      - name: Install pub packages
         run: dart pub get
       - name: Run Unit Tests
         run: dart run test --coverage=coverage
